<?xml version="1.0"?>
<package format="2">
  <name>cubeeye_ttf</name>
  <version>1.0.0</version>
  <description>These are packages for using TTF device with ROS.(Support model : MDC200DW)</description>

  <maintainer email="support@cube-eye.com">CubeEye</maintainer>
  <maintainer email="ohsh@meerecompany.com">ohsh</maintainer>

  <license>meerecompany</license>

  <url type="website">http://wiki.ros.org/CubeEye</url>
  <url type="bugtracker">https://github.com/cubeeye/ros-ttf</url>

  <author email="support@cube-eye.com">CubeEye</author>
  <author email="ohsh@meerecompany.com">ohsh</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
